<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D9C2"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="399dp"
        android:layout_height="725dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29">

        <FrameLayout
            android:id="@+id/framePrincipal"
            android:layout_width="0dp"
            android:layout_height="506dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#F2D9C2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.465" />

        <EditText
            android:id="@+id/pagNumber"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:ems="10"
            android:fontFamily="@font/archivo_medium"
            android:inputType="number"
            android:text="1"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSiguiente"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@+id/buttonAtras"
            app:layout_constraintTop_toBottomOf="@+id/framePrincipal"
            app:layout_constraintVertical_bias="0.459" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#D2B48C"
            android:fontFamily="@font/archivo_medium"
            android:onClick="botonDrawer"
            android:text="@string/app_button_Ind"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031" />

        <Button
            android:id="@+id/buttonAtras"
            android:layout_width="53dp"
            android:layout_height="54dp"
            android:background="@android:drawable/ic_media_rew"
            android:contentDescription="Botón para ir a la página anterior"
            android:onClick="buttonAtras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/framePrincipal"
            app:layout_constraintVertical_bias="0.447" />

        <Button
            android:id="@+id/buttonSiguiente"
            android:layout_width="64dp"
            android:layout_height="57dp"
            android:background="@android:drawable/ic_media_ff"
            android:contentDescription="Botón para ir a la página siguiente"
            android:onClick="buttonSiguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/framePrincipal"
            app:layout_constraintVertical_bias="0.428" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginRight="50dp"
        android:background="#D2B48C">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="131dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="50dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#F4E4B0"
                    android:text="@string/app_button6_P1"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#F4E4B0"
                    android:text="@string/app_button7_P2"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#F4E4B0"
                    android:text="@string/app_button8_P3"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#F4E4B0"
                    android:text="@string/app_button9_P4"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>